# stm32-cmake

./: .gitignore
cmake/: cpputest-init.cmake
cpputest/: CMakeLists copy.txt  CMakeLists.txt
examples/blinky/: CMakeLists.txt  blinky.c
examples/blinky-ll/: CMakeLists.txt
